--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 </head>
 
 <body>
+
     <div class="navbar">
         <ul>
-            <li><a href="#createaccount">Skapa konto</a></li>
+            <li><a href="skapakonto.html">Skapa konto</a></li> 
             <li><a href="#login">Logga in</a></li>
             <li><a href="#faq">Om Ljuva livet</a></li>
         </ul>
@@ -42,7 +43,7 @@
                 <a href="skapakonto.html" class="cta-button">Skapa konto</a>
                 
 
-                <a href="loggain.html" class="cta-button">Logga in</a>
+                <a href="skapakonto.html" class="cta-button">Logga in</a>
                 <p>Börja din dejtingresa redan idag!</p>
             </div>
 
