--- a/preferences.html
+++ b/preferences.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
-
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ljuva livet - Dina Preferenser</title>
     <link rel="stylesheet" type="text/css" href="preferences.css">
 </head>
-
 <body>
+    <header>
+        <div class="back-button">
+            <a href="skapakonto.html">&#8592; Tillbaka</a>
+        </div>
+    </header>
     <div class="container">
         <h1>Dina Preferenser</h1>
         <form action="matchmaking.php" method="post">
@@ -54,7 +59,7 @@
             
 
 
-                    <input type="submit" value="Hitta Matcher">
+                    <input type="submit" value="Se matchande profiler">
         </form>
 </body>
 
