--- a/chat.html
+++ b/chat.html
@@ -2,54 +2,46 @@
 <html>
 
 <head>
+     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ljuva hem - Chatta</title>
     <link rel="stylesheet" type="text/css" href="chat.css">
 </head>
 
 <body>
     <header>
-        <div class="profile-info">
-            <img src="me.jpg" alt="Min profilbild">
-            <span>Min profil</span>
+        <div class="back-button">
+            <a href="flirt.html">&#8592; Tillbaka</a>
         </div>
-        <h1>Chatt med Emilia</h1>
+        <a href="skapakonto.html" class="profile-info">
+            <img src="stina.jpg" alt="Min profil">
+            <span>Min profil</span>
+        </a>
+        <h1>Chatta med Thea</h1>
     </header>
 
     <div class="chat-container">
         <div class="chat">
             <div class="message sent">
-                <img src="me.jpg" alt="Profilbild">
+                <img src="stina.jpg" alt="Profilbild">
                 <div class="message-content">
-                    <p>Hej Emilia!</p>
+                    <p>Hej Thea! Allt bra med dig?</p>
                 </div>
             </div>
             <div class="message received">
-                <img src="emilia.jpg" alt="Profilbild">
+                <img src="thea.jpg" alt="Profilbild">
                 <div class="message-content">
-                    <p>Hej på dig!</p>
-                </div>
-           
-            </div>
-            <div class="message sent">
-                <img src="me.jpg" alt="Profilbild">
-                <div class="message-content">
-                    <p>Hur mår du?</p>
+                    <p></p>
                 </div>
             </div>
-            <div class="message received">
-                <img src="emilia.jpg" alt="Profilbild">
-                <div class="message-content">
-                    <p>Bara fint tack, hur är det själv?</p>
-                </div>
-            <!-- Lägg till fler meddelanden här -->
-        </div>
         <br>
 
         <div class="input-container">
-            <input type="text" id="message" placeholder="Skriv ditt meddelande">
+            <input type="text" id="message-input" placeholder="Skriv ditt meddelande">
             <button id="send-button">Skicka</button>
         </div>
-    </div>
+        
+        <div id="chat-messages"></div>
 
     <footer>
         &copy; 2023 Ljuva livet
