--- a/profiles.html
+++ b/profiles.html
@@ -2,108 +2,106 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ljuva livet - Profiler</title>
     <link rel="stylesheet" type="text/css" href="profiles.css">
 </head>
 
 <body>
     <header>
-        <div class="profile-info">
-            <img src="me.jpg" alt="Min profilbild">
-            <span>Min profil</span>
+        <div class="back-button">
+            <a href="preferences.html">&#8592; Tillbaka</a>
         </div>
+        <a href="skapakonto.html" class="profile-info">
+            <img src="stina.jpg" alt="Min profil">
+            <span>Min profil</span>
+        </a>
+        
         <h1>Matchande Profiler</h1>
     </header>
 
     <div class="profiles">
         <div class="profile">
-            <img src="emilia.jpg" alt="Profilbild">
-            <div class="name">Emilia</div>
+            <img src="thea.jpg" alt="Profilbild">
+            <div class="name">Thea</div>
             <br>
-            <div class="age">Ålder: 25 år</div>
+            <div class="age">Ålder: 21 år</div>
             <div class="city">Område: Norrmalm</div>
             <div class="interests">Intressen: Resor, Foto, Yoga</div>
-            <button class="flirt-button">★ Skicka flirt ★</button>
-        </div>
+            <a href="flirt.html" class="flirt-button">★ Skicka flirt ★</a>        </div>
 
         <div class="profile">
-            <img src="tim.jpg" alt="Profilbild">
-            <div class="name">Tim</div>
+            <img src="gabriel.jpg" alt="Profilbild">
+            <div class="name">Gabriel</div>
             <br>
             <div class="age">Ålder: 24 år</div>
             <div class="city">Område: Södermalm</div>
             <div class="interests">Intressen: Film, Fotboll, Matlagning</div>
-            <button class="flirt-button">★ Skicka flirt ★</button>
-        </div>
+            <a href="flirt.html" class="flirt-button">★ Skicka flirt ★</a>        </div>
 
         <div class="profile">
-            <img src="evelina.jpg" alt="Profilbild">
-            <div class="name">Evelina</div>
+            <img src="adrienne.jpg" alt="Profilbild">
+            <div class="name">Adrienne</div>
             <br>
-            <div class="age">Ålder: 24 år</div>
+            <div class="age">Ålder: 23 år</div>
             <div class="city">Område: Östermalm</div>
             <div class="interests">Intressen: Musik, Resor, Konst</div>
-            <button class="flirt-button">★ Skicka flirt ★</button>
-         </div>
+            <a href="flirt.html" class="flirt-button">★ Skicka flirt ★</a>         </div>
 
         <div class="profile">
-            <img src="zakarias.jpg" alt="Profilbild">
-            <div class="name">Zakarias</div>
+            <img src="martin.jpg" alt="Profilbild">
+            <div class="name">Martin</div>
             <br>
-            <div class="age">Ålder: 25 år</div>
+            <div class="age">Ålder: 26 år</div>
             <div class="city">Område: Kungsholmen</div>
             <div class="interests">Intressen: Gitarr, Resor, Hockey</div>
-            <button class="flirt-button">★ Skicka flirt ★</button>
-        </div>
+            <a href="flirt.html" class="flirt-button">★ Skicka flirt ★</a>        </div>
 
         <div class="profile">
-            <img src="selma.jpg" alt="Profilbild">
-            <div class="name">Selma</div>
+            <img src="filippa.jpg" alt="Profilbild">
+            <div class="name">Filippa</div>
             <br>
             <div class="age">Ålder: 24 år</div>
             <div class="city">Område: Vasastan</div>
             <div class="interests">Intressen: Dans, Resa, Matlagning</div>
-            <button class="flirt-button">★ Skicka flirt ★</button>
-        </div>
+            <a href="flirt.html" class="flirt-button">★ Skicka flirt ★</a>        </div>
 
         <div class="profile">
-            <img src="jakob.jpg" alt="Profilbild">
-            <div class="name">Jakob</div>
+            <img src="jesper.jpg" alt="Profilbild">
+            <div class="name">Jesper</div>
             <br>
-            <div class="age">Ålder: 27 år</div>
+            <div class="age">Ålder: 23 år</div>
             <div class="city">Område: Södermalm</div>
             <div class="interests">Intressen: Film, Matlagning, Böcker</div>
-            <button class="flirt-button">★ Skicka flirt ★</button>
-        </div>
+            <a href="flirt.html" class="flirt-button">★ Skicka flirt ★</a>        </div>
 
         <div class="profile">
-            <img src="hannah.jpg" alt="Profilbild">
-            <div class="name">Hannah</div>
+            <img src="matilda.jpg" alt="Profilbild">
+            <div class="name">Matilda</div>
             <br>
             <div class="age">Ålder: 24 år</div>
             <div class="city">Område: Solna</div>
             <div class="interests">Intressen: Vin, Promenader, Matlagning</div>
-            <button class="flirt-button">★ Skicka flirt ★</button>
-        </div>
+            <a href="flirt.html" class="flirt-button">★ Skicka flirt ★</a>        </div>
 
         <div class="profile">
-            <img src="casper.jpg" alt="Profilbild">
-            <div class="name">Casper</div>
-            <br>
-            <div class="age">Ålder: 26 år</div>
-            <div class="city">Område: Liljeholmen</div>
-            <div class="interests">Intressen: Resor, Konst, Bilar</div>
-            <button class="flirt-button">★ Skicka flirt ★</button>
-        </div>
-
-        <div class="profile">
-            <img src="emelie.jpg" alt="Profilbild">
-            <div class="name">Emelie</div>
+            <img src="svante.jpg" alt="Profilbild">
+            <div class="name">Svante</div>
             <br>
             <div class="age">Ålder: 25 år</div>
+            <div class="city">Område: Liljeholmen</div>
+            <div class="interests">Intressen: Resor, Konst, Bilar</div>
+            <a href="flirt.html" class="flirt-button">★ Skicka flirt ★</a>        </div>
+
+        <div class="profile">
+            <img src="anna.jpg" alt="Profilbild">
+            <div class="name">Anna</div>
+            <br>
+            <div class="age">Ålder: 24 år</div>
             <div class="city">Område: Sundbyberg</div>
             <div class="interests">Intressen: Bakning, Matlagning, Hiking</div>
-            <button class="flirt-button">★ Skicka flirt ★</button>
+            <a href="flirt.html" class="flirt-button">★ Skicka flirt ★</a>
         </div>
 
 
