--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="skapakonto.html">Skapa konto</a></li> 
             <li><a href="#login">Logga in</a></li>
-            <li><a href="#faq">Om Ljuva livet</a></li>
+            <li><a href="https://stinaadaahl.wordpress.com/om-oss/">Om Ljuva livet</a></li>
         </ul>
     </div>
     <div class="container">
