--- a/chat.html
+++ b/chat.html
@@ -34,7 +34,7 @@
             <div class="message sent">
                 <img src="stina.jpg" alt="Profilbild">
                 <div class="message-content">
-                    <p>Hej Thea! Allt bra med dig?</p>
+                    <p>Hej råtta</p>
                 </div>
             </div>
             <div class="message received">
