--- a/preferences.html
+++ b/preferences.html
@@ -63,13 +63,14 @@
                         <option value="universitet">Universitet/Högskola</option>
                         <option value="spelaringenroll">Spelar ingen roll</option>
                     </select><br><br>
+                </div>
 
-
-            
-
-
-                    <input type="submit" value="Se matchande profiler">
+                <div class="form-column">
+                    <a href="profiles.html" class="profile-link">
+                        <input type="button" value="SE MATCHANDE PROFILER">
+                    </a>
+                </div>
         </form>
+    </div>
 </body>
-
 </html>
