--- a/skapakonto.html
+++ b/skapakonto.html
@@ -87,7 +87,7 @@
                 <textarea id="biografi" name="biografi" rows="4"></textarea>
             </div>
             <div style="text-align: center;">
-                <a href="profiles.html">
+                <a href="preferences.html">
                     <button type="button">SKAPA MITT DEJTINGKONTO</button>
                 </a>
             </div>
